OrderBook version 2