@@ -6,13 +6,14 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.List;
 import java.util.stream.Stream;
 
 public class Main {
 
     public static void main(String[] args) throws IOException {
         MarketProcessor marketProcessor = new MarketProcessor();
-        Stream<String> process = marketProcessor.process(Files.lines(Path.of("input.txt")));
-        Files.write(Paths.get("output.txt"), (Iterable<String>)process::iterator);
+        List<String> process = marketProcessor.process(Files.lines(Path.of("input.txt")));
+        //Files.write(Paths.get("output.txt"), process);
     }
 }
